# well-baked-analytics

./: README.md
.github/: pull_request_template.md
.github/workflows/: gbbo-pre-process-data-python-test-lint.yml  gbbo-shared-infra-python-test-lint.yml
wba-aws-infrastructure/: README.md  app.py  pyproject.toml
wba-aws-infrastructure/tests/unit/: test_aws_infrastructure_stack.py
wba-aws-infrastructure/well_baked_analytics_infra/: wba_buckets_stack.py
wba-aws-shared-infrastructure/: Makefile  README.md  app.py  cdk.json  pyproject.toml
wba-aws-shared-infrastructure/aws_cdk_infrastructure/: base_infra_bucket.py  gbbo_s3_bucket.py
wba-aws-shared-infrastructure/tests/: test_sample_init_aws_cdk_stack.py
wba-prototype/: pyproject.toml
